tests/snapshots/conformance__n_object_non_string_key_but_huge_number_instead.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
{9999E9999:1}
stdout --- 
<empty>
stderr --- 
error: expected key or closed curly brace, found `9999E9999`
 --> stdin:1:2
  |
1 | {9999E9999:1}
  | -^^^^^^^^^
  | |
  | expected due to `{`
